Add shuffle support to API
